# Pisco-Code

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  ArchitectureOverview.md  Build.sh  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  INTEGRATION.md  README.md  TODO.md  library.json  library.properties
.github/workflows/: ci.yml  release.yml
cmake/linker/: stm32f410rb.ld
cmake/modules/: avr_outputs.cmake
cmake/toolchains/: arm-none-eabi-gcc.cmake  avr-gcc.cmake  native-gcc.cmake
examples/: .clang-tidy  CMakeLists.txt  basicExample.ino
examples/ESP32 FreeRTOS/: main.cpp
examples/OneLedClock/: OneLedClock.ino
examples/Pisco-Code/: Pisco-Code.ino
examples/Pisco-LED-Code/: Pisco-LED-Code.ino
examples/arduino/BasicBlink/: BasicBlink.ino
examples/avr/: CMakeLists.txt  avr_example_macros.cmake  avr_exit_stub.c  avr_systick.cpp  avr_systick.hpp  basic_example.cpp  hal_led.hpp
examples/avr/boards/arduino-nano/: board_config.cmake  board_config.hpp  hal_led_arduino_nano.cpp
examples/basicExample/: basicExample.ino
examples/stm32/: CMakeLists.txt  basic_example.cpp  hal_led.hpp  stm32_example_macros.cmake  stm32_systick.cpp  stm32_systick.hpp
examples/stm32/boards/f410rb/: board_config.cmake  board_config.hpp  hal_led_nucleo_f410rb.cpp  hardfault.c  libc_init_stub.c
examples/stm32/boards/nucleo-f410rb/: CMakeLists.txt  basic_example.cpp  hal_led_nucleo_f410rb.cpp  hardfault.c
include/: Pisco-Code.h  Pisco-Code.hpp  code_blinker.hpp  hardware_pwm_led_controller.hpp  led_controller.hpp  led_controller_hardware_pwm.hpp  led_controller_software_pwm.hpp  loop.hpp  pisco_code.hpp  pisco_constants.hpp  pisco_types.hpp  show.h  show.hpp  signal_controller.hpp  signal_element.hpp  signal_element_iterator.hpp  signal_emitter.hpp  signal_pulse_iterator.hpp  signal_sequencer.hpp  signal_stack.hpp  signal_types.hpp  signal_units.hpp  software_pwm_led_controller.hpp
scripts/: Build.sh  Upload.sh  test-cmake-integration.sh
src/: CMakeLists.txt  Pisco-Code.cpp  Pisco-Code.h  Pisco-LED-Code.cpp  Pisco-LED-Code.h  code_blinker.cpp  hardware_pwm_led_controller.cpp  led_controller_hardware_pwm.cpp  led_controller_software_pwm.cpp  loop.cpp  loop.h  main.cpp  show.cpp  show.h  signal_controller.cpp  signal_element.cpp  signal_emitter.cpp  signal_sequencer.cpp  signal_stack.cpp  signal_units.cpp  software_pwm_led_controller.cpp
src/freestanding/: pisco_exit_shim.cpp  pisco_memory_shim.cpp  pisco_runtime_shim.cpp
src/runtime/: abort_handlers.cpp
test/: CMakeLists.txt  PiscoCodeTest.cpp
tests/: .clang-tidy  BaseEncodingBlinkerTest.cpp  BaseEncodingTest.cpp  CMakeLists.txt  CodeBlinkerTest.cpp  LedBlinkPatternTest.cpp  LoopBehaviorBlinkerTest.cpp  LoopBehaviorTest.cpp  PiscoCodeTest.cpp  SetterBehaviorBlinkerTest.cpp  SetterBehaviorTest.cpp  SetupTest.cpp  base_encoding_blinker_test.cpp  binary_systematic_high_level_tests.cpp  code_blinker_test.cpp  decimal_systematic_high_level_tests.cpp  deprecated_api_compatibility_test.cpp  generate_pattern_of_digits_test.cpp  hexadecimal_systematic_high_level_tests.cpp  led_blink_pattern_test.cpp  loop_behavior_blinker_test.cpp  octal_systematic_high_level_tests.cpp  setter_behavior_blinker_test.cpp  signal_element_iterator_test.cpp  signal_element_test.cpp  signal_pulse_iterator_test.cpp  signal_sequencer_test.cpp  signal_stack_test.cpp  signal_units_test.cpp  systematic_high_level_tests.cpp
tests/helpers/: BlinkerTestUtils.hpp  LedBlinkPattern.cpp  LedBlinkPattern.hpp  TestLoopRunner.hpp  blinker_test_fixture.hpp  blinker_test_utils.hpp  led_blink_pattern.cpp  led_blink_pattern.hpp  signal_element_iterator_test.hpp  signal_element_test.hpp  test_patterns_common.hpp  tests_constants.hpp  tests_types.hpp
tests/mocks/: MockLedControl.cpp  MockLedControl.hpp  MockLedControlLogger.cpp  MockLedControlLogger.hpp  MockLedControllerAdapter.hpp  mock_led_control_logger.cpp  mock_led_control_logger.hpp  mock_led_controller_adapter.hpp
